# gospel-of-john-tc

./: .gitignore  .vercelignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
data/raw/Byzantine_john_transcriptions/: 04_011.xml  04_017.xml  04_02.xml  04_021.xml  04_0211.xml  04_022.xml  04_028.xml  04_030.xml  04_034.xml  04_036.xml  04_037.xml  04_038.xml  04_041.xml  04_041S.xml  04_044.xml  04_045.xml  04_047.xml  04_07.xml  04_09.xml  04_1073.xml  04_1192.xml  04_1194.xml  04_1203.xml  04_1210.xml  04_1212.xml  04_1216.xml  04_1243.xml  04_1505.xml  04_1514.xml  04_1519.xml  04_18.xml  04_18S.xml  04_2.xml  04_27.xml  04_27S.xml  04_35.xml  04_461.xml  04_461S3.xml  04_461S4.xml  04_475.xml  (+47 more)
data/raw/Family1_greek_john_transcriptions/: 04_1.xml  04_118.xml  04_118sup.xml  04_1192.xml  04_1210.xml  04_1278.xml  04_131.xml  04_1582.xml  (+13 more)
reports/: REPORT.md  stability_heatmap.html
reports/analysis/: CONFOUNDS.md  ROBUSTNESS.md  STABILITY.md  STYLOMETRY.md
reports/genealogy/: VALIDATION.md  john_witnesses.nex  john_witnesses_characters.nex
site/: README.md  app.js  index.html  style.css
site/assets/: john_witnesses_nj.nwk
site/data/: families.json  summary.json  verses.json
src/john_tc/: __init__.py  config.py  pipeline.py  report.py
tests/: test_apparatus.py  test_confounds.py  test_dates.py  test_families.py  test_genealogy.py  test_genealogy_validation.py  test_heatmap.py  test_robustness.py  test_site_export.py  test_stability.py  test_stylometry.py  test_validation.py  test_weighted_instability.py
(+390 files in other folders)
